Fix too big sonner on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -120,7 +120,9 @@
     background: hsl(var(--primary)) !important;
   }
 
-  .toaster {
-    bottom: 5rem !important;
+  @media screen and (min-width: 1024px) {
+    .toaster {
+      bottom: 5rem !important;
+    }
   }
 }
